2022-08
    - changed Rimsenal Smart weapons from using Industrial ammo -> Spacer ammo
    - patched up and coming mod Tenants to not use regular medieval ammo.
    
2022-06-23
    - Added EmpLauncher, SmokeLauncher,IncendiaryLauncher,ThumpCannon and InfernoCannon to explosive ammo
    - Made Kurin surigum use primitive ammo
    - Patched vanilla scenarios to include some starting ammo.

2022-05-16
    - Primitive&Medieval ammo can be crafted at Workbenches from Medieval Overhaul
    - lowered mass for all ammo
    - Reduced sale value for all ammos