@@ -7,7 +7,7 @@
         </supportedVersions>
         <packageId>LimeTreeSnake.Ammo</packageId>
         <description>
-            -License- Code by LTS, art by ELIF and everything owned by LTS. Contact LTS for any inquiries.
+            -License- Contact LTS for any inquiries.
         </description>
         <modDependencies>
             <li>
