@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <loadFolders>
-        <v1.2>
-            <li>/</li>
-            <li>v1.2</li>
-            <li>Shared</li>
-        </v1.2>
-        <v1.3>
-            <li>/</li>
-            <li>v1.3</li>
-            <li>Shared</li>
-        </v1.3>
-    </loadFolders>
+<loadFolders>
+    <v1.3>
+        <li>/</li>
+        <li>Shared</li>
+        <li>v1.3</li>
+    </v1.3>
+</loadFolders>
