@@ -1,254 +1,256 @@
-<?xml version="1.0" encoding="utf-8" ?>
-    <Defs>
-        <RecipeDef>
-            <defName>Make_AmmoPrimitive</defName>
-            <label>make primitive ammo</label>
-            <description>Make primitive ammo by combining textiles and some raw resources.</description>
-            <jobString>Making primitive ammo.</jobString>
-            <workAmount>800</workAmount>
-            <workSkill>Crafting</workSkill>
-            <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
-            <effectWorking>Smith</effectWorking>
-            <soundWorking>Recipe_Smith</soundWorking>
-            <recipeUsers>
-                <li>CraftingSpot</li>
-                <li MayRequire="DankPyon.Medieval.Overhaul">DankPyon_Workbench</li>
-                <li>LTS_AmmunitionBench</li>
-            </recipeUsers>
-            <allowMixingIngredients>true</allowMixingIngredients>
-            <skillRequirements>
-                <Crafting>2</Crafting>
-            </skillRequirements>
-            <ingredients>
-                <li>
-                    <filter>
-                        <thingDefs>
-                            <li>WoodLog</li>
-                        </thingDefs>
-                    </filter>
-                    <count>30</count>
-                </li>
-            </ingredients>
-            <products>
-                <AmmoPrimitive>75</AmmoPrimitive>
-            </products>
-        </RecipeDef>
+<?xml version="1.0" encoding="utf-8"?>
+<Defs>
+    <RecipeDef>
+        <defName>Make_AmmoPrimitive</defName>
+        <label>make primitive ammo</label>
+        <description>Make primitive ammo by combining textiles and some raw resources.</description>
+        <jobString>Making primitive ammo.</jobString>
+        <workAmount>800</workAmount>
+        <workSkill>Crafting</workSkill>
+        <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
+        <effectWorking>Smith</effectWorking>
+        <soundWorking>Recipe_Smith</soundWorking>
+        <recipeUsers>
+            <li>CraftingSpot</li>
+            <li MayRequire="DankPyon.Medieval.Overhaul">DankPyon_Workbench</li>
+            <li>LTS_AmmunitionBench</li>
+        </recipeUsers>
+        <allowMixingIngredients>true</allowMixingIngredients>
+        <skillRequirements>
+            <Crafting>2</Crafting>
+        </skillRequirements>
+        <ingredients>
+            <li>
+                <filter>
+                    <thingDefs>
+                        <li>WoodLog</li>
+                    </thingDefs>
+                </filter>
+                <count>30</count>
+            </li>
+        </ingredients>
+        <products>
+            <AmmoPrimitive>75</AmmoPrimitive>
+        </products>
+    </RecipeDef>
 
-        <RecipeDef>
-            <defName>Make_Medieval</defName>
-            <label>make medieval ammo</label>
-            <description>Make all the black powder.</description>
-            <jobString>Making black powder.</jobString>
-            <workAmount>1600</workAmount>
-            <workSkill>Crafting</workSkill>
-            <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
-            <effectWorking>Smith</effectWorking>
-            <soundWorking>Recipe_Smith</soundWorking>
-            <recipeUsers>
-                <li>TableStonecutter</li>
-                <li MayRequire="DankPyon.Medieval.Overhaul">DankPyon_Workbench</li>
-                <li>LTS_AmmunitionBench</li>
-            </recipeUsers>
-            <allowMixingIngredients>true</allowMixingIngredients>
-            <skillRequirements>
-                <Crafting>5</Crafting>
-            </skillRequirements>
-            <ingredients>
-                <li>
-                    <filter>
-                        <categories>
-                            <li>Chunks</li>
-                        </categories>
-                    </filter>
-                    <count>1</count>
-                </li>
-            </ingredients>
-            <fixedIngredientFilter>
-                <categories>
-                    <li>Chunks</li>
-                </categories>
-            </fixedIngredientFilter>
-            <products>
-                <AmmoMedieval>75</AmmoMedieval>
-            </products>
-        </RecipeDef>
+    <RecipeDef>
+        <defName>Make_Medieval</defName>
+        <label>make medieval ammo</label>
+        <description>Make all the black powder.</description>
+        <jobString>Making black powder.</jobString>
+        <workAmount>1600</workAmount>
+        <workSkill>Crafting</workSkill>
+        <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
+        <effectWorking>Smith</effectWorking>
+        <soundWorking>Recipe_Smith</soundWorking>
+        <recipeUsers>
+            <li>TableStonecutter</li>
+            <li MayRequire="DankPyon.Medieval.Overhaul">DankPyon_Workbench</li>
+            <li>LTS_AmmunitionBench</li>
+        </recipeUsers>
+        <allowMixingIngredients>true</allowMixingIngredients>
+        <skillRequirements>
+            <Crafting>5</Crafting>
+        </skillRequirements>
+        <ingredients>
+            <li>
+                <filter>
+                    <categories>
+                        <li>Chunks</li>
+                    </categories>
+                </filter>
+                <count>1</count>
+            </li>
+        </ingredients>
+        <fixedIngredientFilter>
+            <categories>
+                <li>Chunks</li>
+            </categories>
+        </fixedIngredientFilter>
+        <products>
+            <AmmoMedieval>75</AmmoMedieval>
+        </products>
+    </RecipeDef>
 
-        <RecipeDef>
-            <defName>Make_AmmoIndustrial</defName>
-            <label>make industrial ammo</label>
-            <description>Make bullets that go pew.</description>
-            <jobString>Making bullets.</jobString>
-            <workAmount>1200</workAmount>
-            <workSkill>Crafting</workSkill>
-            <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
-            <effectWorking>Smith</effectWorking>
-            <soundWorking>Recipe_Smith</soundWorking>
-            <recipeUsers>
-                <li>LTS_AmmunitionBench</li>
-            </recipeUsers>
-            <allowMixingIngredients>false</allowMixingIngredients>
-            <skillRequirements>
-                <Crafting>6</Crafting>
-            </skillRequirements>
-            <ingredients>
-                <li>
-                    <filter>
-                        <thingDefs>
-                            <li>Steel</li>
-                            <li MayRequire="Argon.VMEu">VMEu_Lead</li>
-                        </thingDefs>
-                    </filter>
-                    <count>25</count>
-                </li>
-            </ingredients>
-            <fixedIngredientFilter>
-                <thingDefs>
-                    <li>Steel</li>
-                    <li MayRequire="Argon.VMEu">VMEu_Lead</li>
-                </thingDefs>
-            </fixedIngredientFilter>
-            <products>
-                <AmmoIndustrial>150</AmmoIndustrial>
-            </products>
-        </RecipeDef>
+    <RecipeDef>
+        <defName>Make_AmmoIndustrial</defName>
+        <label>make industrial ammo</label>
+        <description>Make bullets that go pew.</description>
+        <jobString>Making bullets.</jobString>
+        <workAmount>1200</workAmount>
+        <workSkill>Crafting</workSkill>
+        <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
+        <effectWorking>Smith</effectWorking>
+        <soundWorking>Recipe_Smith</soundWorking>
+        <recipeUsers>
+            <li>LTS_AmmunitionBench</li>
+        </recipeUsers>
+        <allowMixingIngredients>false</allowMixingIngredients>
+        <skillRequirements>
+            <Crafting>6</Crafting>
+        </skillRequirements>
+        <ingredients>
+            <li>
+                <filter>
+                    <thingDefs>
+                        <li>Steel</li>
+                        <li MayRequire="Argon.VMEu">VMEu_Lead</li>
+                    </thingDefs>
+                </filter>
+                <count>25</count>
+            </li>
+        </ingredients>
+        <fixedIngredientFilter>
+            <thingDefs>
+                <li>Steel</li>
+                <li MayRequire="Argon.VMEu">VMEu_Lead</li>
+            </thingDefs>
+        </fixedIngredientFilter>
+        <products>
+            <AmmoIndustrial>150</AmmoIndustrial>
+        </products>
+    </RecipeDef>
 
-        <RecipeDef>
-            <defName>Make_AmmoSpacer</defName>
-            <label>make spacer ammo</label>
-            <description>Make spacer ammo by refining chemfuel, steel.</description>
-            <jobString>Making spacer ammo.</jobString>
-            <workAmount>4000</workAmount>
-            <workSkill>Intellectual</workSkill>
-            <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
-            <effectWorking>Smith</effectWorking>
-            <soundWorking>Recipe_Smith</soundWorking>
-            <recipeUsers>
-                <li>LTS_AmmunitionBench</li>
-            </recipeUsers>
-            <allowMixingIngredients>false</allowMixingIngredients>
-            <skillRequirements>
-                <Intellectual>6</Intellectual>
-            </skillRequirements>
-            <ingredients>
-                <li>
-                    <filter>
-                        <thingDefs>
-                            <li>Steel</li>
-                            <li MayRequire="Argon.VMEu">VMEu_Tungsten</li>
-                            <li MayRequire="Argon.VMEu">VMEu_Germanium</li>
-                        </thingDefs>
-                    </filter>
-                    <count>20</count>
-                </li>
-                <li>
-                    <filter>
-                        <thingDefs>
-                            <li>Chemfuel</li>
-                        </thingDefs>
-                    </filter>
-                    <count>25</count>
-                </li>
-            </ingredients>
-            <fixedIngredientFilter>
-                <thingDefs>
-                    <li>Steel</li>
-                    <li>Chemfuel</li>
-                </thingDefs>
-            </fixedIngredientFilter>
-            <products>
-                <AmmoSpacer>150</AmmoSpacer>
-            </products>
-        </RecipeDef>
+    <RecipeDef>
+        <defName>Make_AmmoSpacer</defName>
+        <label>make spacer ammo</label>
+        <description>Make spacer ammo by refining chemfuel, steel.</description>
+        <jobString>Making spacer ammo.</jobString>
+        <workAmount>4000</workAmount>
+        <workSkill>Intellectual</workSkill>
+        <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
+        <effectWorking>Smith</effectWorking>
+        <soundWorking>Recipe_Smith</soundWorking>
+        <recipeUsers>
+            <li>LTS_AmmunitionBench</li>
+        </recipeUsers>
+        <allowMixingIngredients>false</allowMixingIngredients>
+        <skillRequirements>
+            <Intellectual>6</Intellectual>
+        </skillRequirements>
+        <ingredients>
+            <li>
+                <filter>
+                    <thingDefs>
+                        <li>Steel</li>
+                        <li MayRequire="Argon.VMEu">VMEu_Tungsten</li>
+                        <li MayRequire="Argon.VMEu">VMEu_Germanium</li>
+                    </thingDefs>
+                </filter>
+                <count>20</count>
+            </li>
+            <li>
+                <filter>
+                    <thingDefs>
+                        <li>Chemfuel</li>
+                    </thingDefs>
+                </filter>
+                <count>25</count>
+            </li>
+        </ingredients>
+        <fixedIngredientFilter>
+            <thingDefs>
+                <li>Steel</li>
+                <li>Chemfuel</li>
+                <li MayRequire="Argon.VMEu">VMEu_Tungsten</li>
+                <li MayRequire="Argon.VMEu">VMEu_Germanium</li>
+            </thingDefs>
+        </fixedIngredientFilter>
+        <products>
+            <AmmoSpacer>150</AmmoSpacer>
+        </products>
+    </RecipeDef>
 
-        <RecipeDef>
-            <defName>Make_AmmoExplosive</defName>
-            <label>make explosive ammo</label>
-            <description>Make explosives by combining steel and chemfuel.</description>
-            <jobString>Making bullets.</jobString>
-            <workAmount>1200</workAmount>
-            <workSkill>Crafting</workSkill>
-            <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
-            <effectWorking>Smith</effectWorking>
-            <soundWorking>Recipe_Smith</soundWorking>
-            <recipeUsers>
-                <li>LTS_AmmunitionBench</li>
-            </recipeUsers>
-            <allowMixingIngredients>false</allowMixingIngredients>
-            <skillRequirements>
-                <Crafting>6</Crafting>
-            </skillRequirements>
-            <ingredients>
-                <li>
-                    <filter>
-                        <thingDefs>
-                            <li>Steel</li>
-                        </thingDefs>
-                    </filter>
-                    <count>20</count>
-                </li>
-                <li>
-                    <filter>
-                        <thingDefs>
-                            <li>Chemfuel</li>
-                        </thingDefs>
-                    </filter>
-                    <count>10</count>
-                </li>
-            </ingredients>
-            <fixedIngredientFilter>
-                <thingDefs>
-                    <li>Steel</li>
-                    <li>Chemfuel</li>
-                </thingDefs>
-            </fixedIngredientFilter>
-            <products>
-                <AmmoExplosive>150</AmmoExplosive>
-            </products>
-        </RecipeDef>
+    <RecipeDef>
+        <defName>Make_AmmoExplosive</defName>
+        <label>make explosive ammo</label>
+        <description>Make explosives by combining steel and chemfuel.</description>
+        <jobString>Making bullets.</jobString>
+        <workAmount>1200</workAmount>
+        <workSkill>Crafting</workSkill>
+        <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
+        <effectWorking>Smith</effectWorking>
+        <soundWorking>Recipe_Smith</soundWorking>
+        <recipeUsers>
+            <li>LTS_AmmunitionBench</li>
+        </recipeUsers>
+        <allowMixingIngredients>false</allowMixingIngredients>
+        <skillRequirements>
+            <Crafting>6</Crafting>
+        </skillRequirements>
+        <ingredients>
+            <li>
+                <filter>
+                    <thingDefs>
+                        <li>Steel</li>
+                    </thingDefs>
+                </filter>
+                <count>20</count>
+            </li>
+            <li>
+                <filter>
+                    <thingDefs>
+                        <li>Chemfuel</li>
+                    </thingDefs>
+                </filter>
+                <count>10</count>
+            </li>
+        </ingredients>
+        <fixedIngredientFilter>
+            <thingDefs>
+                <li>Steel</li>
+                <li>Chemfuel</li>
+            </thingDefs>
+        </fixedIngredientFilter>
+        <products>
+            <AmmoExplosive>150</AmmoExplosive>
+        </products>
+    </RecipeDef>
 
-        <RecipeDef>
-            <defName>Make_AmmoArchotech</defName>
-            <label>make archotech ammo</label>
-            <description>Make archotech ammo by refining chemfuel, steel.</description>
-            <jobString>Making archotech ammo.</jobString>
-            <workAmount>5000</workAmount>
-            <workSkill>Intellectual</workSkill>
-            <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
-            <effectWorking>Smith</effectWorking>
-            <soundWorking>Recipe_Smith</soundWorking>
-            <recipeUsers>
-                <li>LTS_AmmunitionBench</li>
-            </recipeUsers>
-            <allowMixingIngredients>false</allowMixingIngredients>
-            <skillRequirements>
-                <Intellectual>9</Intellectual>
-            </skillRequirements>
-            <ingredients>
-                <li>
-                    <filter>
-                        <thingDefs>
-                            <li>ComponentIndustrial</li>
-                        </thingDefs>
-                    </filter>
-                    <count>2</count>
-                </li>
-                <li>
-                    <filter>
-                        <thingDefs>
-                            <li>Chemfuel</li>
-                        </thingDefs>
-                    </filter>
-                    <count>30</count>
-                </li>
-            </ingredients>
-            <fixedIngredientFilter>
-                <thingDefs>
-                    <li>ComponentIndustrial</li>
-                    <li>Chemfuel</li>
-                </thingDefs>
-            </fixedIngredientFilter>
-            <products>
-                <AmmoArchotech>150</AmmoArchotech>
-            </products>
-        </RecipeDef>
-    </Defs>
+    <RecipeDef>
+        <defName>Make_AmmoArchotech</defName>
+        <label>make archotech ammo</label>
+        <description>Make archotech ammo by refining chemfuel, steel.</description>
+        <jobString>Making archotech ammo.</jobString>
+        <workAmount>5000</workAmount>
+        <workSkill>Intellectual</workSkill>
+        <workSpeedStat>GeneralLaborSpeed</workSpeedStat>
+        <effectWorking>Smith</effectWorking>
+        <soundWorking>Recipe_Smith</soundWorking>
+        <recipeUsers>
+            <li>LTS_AmmunitionBench</li>
+        </recipeUsers>
+        <allowMixingIngredients>false</allowMixingIngredients>
+        <skillRequirements>
+            <Intellectual>9</Intellectual>
+        </skillRequirements>
+        <ingredients>
+            <li>
+                <filter>
+                    <thingDefs>
+                        <li>ComponentIndustrial</li>
+                    </thingDefs>
+                </filter>
+                <count>2</count>
+            </li>
+            <li>
+                <filter>
+                    <thingDefs>
+                        <li>Chemfuel</li>
+                    </thingDefs>
+                </filter>
+                <count>30</count>
+            </li>
+        </ingredients>
+        <fixedIngredientFilter>
+            <thingDefs>
+                <li>ComponentIndustrial</li>
+                <li>Chemfuel</li>
+            </thingDefs>
+        </fixedIngredientFilter>
+        <products>
+            <AmmoArchotech>150</AmmoArchotech>
+        </products>
+    </RecipeDef>
+</Defs>
